--- a/.github/workflows/run_duolingo.yml
+++ b/.github/workflows/run_duolingo.yml
@@ -18,10 +18,12 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     steps:
+      - name: Setup FFmpeg
+        uses: federicocarboni/setup-ffmpeg@v3.1
       - name: agu
         run: sudo apt-get update
-      - name: Setup ffmpeg for differnt platforms 
-        uses: FedericoCarboni/setup-ffmpeg@master
+      #- name: Setup ffmpeg for differnt platforms 
+      # uses: FedericoCarboni/setup-ffmpeg@master
       - uses: actions/checkout@v2
       - name: Set up Python
         uses: actions/setup-python@v4
